# agent-poc

./: .env.example  CHANGELOG.md  KB_TOOL_README.md  KB_TOOL_SUMMARY.md  MIGRATION_TO_OPENAI.md  QUICKSTART.md  QUICKSTART_KB_TOOL.md  README.md  REFACTORING_SUMMARY.md  mypy.ini  pyproject.toml
examples/: README.md  agent_with_tools.py  basic_usage.py  kb_query_example.py  streaming_example.py  test_kb_tool.py
src/agent_poc/: __init__.py  agent.py  bedrock_client.py  main.py  openai_client.py  tools.py
src/agent_poc/config/: __init__.py  settings.py
tests/: __init__.py  test_agent.py  test_bedrock_client.py  test_settings.py  test_tools.py
